--- a/assets/stylesheets/bootstrap/_dropdowns.scss
+++ b/assets/stylesheets/bootstrap/_dropdowns.scss
@@ -8,7 +8,7 @@
   display: inline-block;
   width: 0;
   height: 0;
-  margin-left: 2px;
+  margin-#{$left}: 2px;
   vertical-align: middle;
   border-top:   $caret-width-base dashed;
   border-top:   $caret-width-base solid \9; // IE8
@@ -31,16 +31,16 @@
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  #{$left}: 0;
   z-index: $zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
-  float: left;
+  float: $left;
   min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0; // override default ul
   list-style: none;
   font-size: $font-size-base;
-  text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
+  text-align: $left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   background-color: $dropdown-bg;
   border: 1px solid $dropdown-fallback-border; // IE8 fallback
   border: 1px solid $dropdown-border;
@@ -51,9 +51,9 @@
   // Aligns the dropdown menu to right
   //
   // Deprecated as of 3.1.0 in favor of `.dropdown-menu-[dir]`
-  &.pull-right {
-    right: 0;
-    left: auto;
+  &.pull-#{$right} {
+    #{$right}: 0;
+    #{$left}: auto;
   }
 
   // Dividers (basically an hr) within the dropdown
@@ -134,19 +134,19 @@
 //
 // Add extra class to `.dropdown-menu` to flip the alignment of the dropdown
 // menu with the parent.
-.dropdown-menu-right {
-  left: auto; // Reset the default from `.dropdown-menu`
-  right: 0;
+.dropdown-menu-#{$right} {
+  #{$left}: auto; // Reset the default from `.dropdown-menu`
+  #{$right}: 0;
 }
-// With v3, we enabled auto-flipping if you have a dropdown within a right
+// With v3, we enabled auto-flipping if you have a dropdown within a #{$right}
 // aligned nav component. To enable the undoing of that, we provide an override
 // to restore the default dropdown menu alignment.
 //
-// This is only for left-aligning a dropdown menu within a `.navbar-right` or
-// `.pull-right` nav component.
-.dropdown-menu-left {
-  left: 0;
-  right: auto;
+// This is only for #{$left}-aligning a dropdown menu within a `.navbar-#{$right}` or
+// `.pull-#{$right}` nav component.
+.dropdown-menu-#{$left} {
+  #{$left}: 0;
+  #{$right}: auto;
 }
 
 // Dropdown section headers
@@ -170,9 +170,9 @@
 }
 
 // Right aligned dropdowns
-.pull-right > .dropdown-menu {
-  right: 0;
-  left: auto;
+.pull-#{$right} > .dropdown-menu {
+  #{$right}: 0;
+  #{$left}: auto;
 }
 
 // Allow for dropdowns to go bottom up (aka, dropup-menu)
@@ -203,14 +203,14 @@
 // Reiterate per navbar.less and the modified component alignment there.
 
 @media (min-width: $grid-float-breakpoint) {
-  .navbar-right {
+  .navbar-#{$right} {
     .dropdown-menu {
-      right: 0; left: auto;
+      #{$right}: 0; #{$left}: auto;
     }
-    // Necessary for overrides of the default right aligned menu.
+    // Necessary for overrides of the default #{$right} aligned menu.
     // Will remove come v4 in all likelihood.
-    .dropdown-menu-left {
-      left: 0; right: auto;
+    .dropdown-menu-#{$left} {
+      #{$left}: 0; #{$right}: auto;
     }
   }
 }
