--- a/assets/stylesheets/bootstrap/_modals.scss
+++ b/assets/stylesheets/bootstrap/_modals.scss
@@ -30,7 +30,7 @@
 
   // When fading in the modal, animate it to slide down
   &.fade .modal-dialog {
-    @include translate(0, -25%);
+    @include translate(0, if-ltr(-25%, 25%));
     @include transition-transform(0.3s ease-out);
   }
   &.in .modal-dialog { @include translate(0, 0) }
@@ -102,22 +102,22 @@
 // Footer (for actions)
 .modal-footer {
   padding: $modal-inner-padding;
-  text-align: right; // right align buttons
+  text-align: $right; // right align buttons
   border-top: 1px solid $modal-footer-border-color;
   @include clearfix; // clear it in case folks use .pull-* classes on buttons
 
   // Properly space out buttons
   .btn + .btn {
-    margin-left: 5px;
+    margin-#{$left}: 5px;
     margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
   }
   // but override that for button groups
   .btn-group .btn + .btn {
-    margin-left: -1px;
+    margin-#{$left}: -1px;
   }
   // and override it for block buttons as well
   .btn-block + .btn-block {
-    margin-left: 0;
+    margin-#{$left}: 0;
   }
 }
 
