directionalize _popovers.scss (arrows shadow effects)

--- a/assets/stylesheets/bootstrap/_popovers.scss
+++ b/assets/stylesheets/bootstrap/_popovers.scss
@@ -77,7 +77,7 @@
     &:after {
       content: " ";
       bottom: 1px;
-      margin-left: -$popover-arrow-width;
+      margin-#{$left}: -$popover-arrow-width;
       border-bottom-width: 0;
       border-top-color: $popover-arrow-color;
     }
@@ -107,7 +107,7 @@
     &:after {
       content: " ";
       top: 1px;
-      margin-left: -$popover-arrow-width;
+      margin-#{$left}: -$popover-arrow-width;
       border-top-width: 0;
       border-bottom-color: $popover-arrow-color;
     }
