--- a/assets/stylesheets/bootstrap/_carousel.scss
+++ b/assets/stylesheets/bootstrap/_carousel.scss
@@ -16,7 +16,7 @@
   > .item {
     display: none;
     position: relative;
-    @include transition(.6s ease-in-out left);
+    @include transition(.6s ease-in-out $left);
 
     // Account for jankitude on images
     > img,
@@ -32,20 +32,20 @@
       @include perspective(1000px);
 
       &.next,
-      &.active.right {
-        @include translate3d(100%, 0, 0);
-        left: 0;
+      &.active.#{$right} {
+        @include translate3d(if-ltr(100%, -100%), 0, 0);
+        #{$left}: 0;
       }
       &.prev,
-      &.active.left {
-        @include translate3d(-100%, 0, 0);
-        left: 0;
+      &.active.#{$left} {
+        @include translate3d(if-ltr(-100%, 100%), 0, 0);
+        #{$left}: 0;
       }
-      &.next.left,
-      &.prev.right,
+      &.next.#{$left},
+      &.prev.#{$right},
       &.active {
         @include translate3d(0, 0, 0);
-        left: 0;
+        #{$left}: 0;
       }
     }
   }
@@ -57,7 +57,7 @@
   }
 
   > .active {
-    left: 0;
+    #{$left}: 0;
   }
 
   > .next,
@@ -68,21 +68,21 @@
   }
 
   > .next {
-    left: 100%;
+    #{$left}: 100%;
   }
   > .prev {
-    left: -100%;
+    #{$left}: -100%;
   }
-  > .next.left,
-  > .prev.right {
-    left: 0;
+  > .next.#{$left},
+  > .prev.#{$right} {
+    #{$left}: 0;
   }
 
-  > .active.left {
-    left: -100%;
+  > .active.#{$left} {
+    #{$left}: -100%;
   }
-  > .active.right {
-    left: 100%;
+  > .active.#{$right} {
+    #{$left}: 100%;
   }
 
 }
@@ -93,7 +93,7 @@
 .carousel-control {
   position: absolute;
   top: 0;
-  left: 0;
+  #{$left}: 0;
   bottom: 0;
   width: $carousel-control-width;
   @include opacity($carousel-control-opacity);
@@ -106,12 +106,12 @@
   // animation if you trip this while in the middle of another animation.
 
   // Set gradients for backgrounds
-  &.left {
+  &.#{$left} {
     @include gradient-horizontal($start-color: rgba(0,0,0,.5), $end-color: rgba(0,0,0,.0001));
   }
-  &.right {
-    left: auto;
-    right: 0;
+  &.#{$right} {
+    #{$left}: auto;
+    #{$right}: 0;
     @include gradient-horizontal($start-color: rgba(0,0,0,.0001), $end-color: rgba(0,0,0,.5));
   }
 
@@ -136,14 +136,14 @@
     display: inline-block;
   }
   .icon-prev,
-  .glyphicon-chevron-left {
-    left: 50%;
-    margin-left: -10px;
+  .glyphicon-chevron-#{$left} {
+    #{$left}: 50%;
+    margin-#{$left}: -10px;
   }
   .icon-next,
-  .glyphicon-chevron-right {
-    right: 50%;
-    margin-right: -10px;
+  .glyphicon-chevron-#{$right} {
+    #{$right}: 50%;
+    margin-#{$right}: -10px;
   }
   .icon-prev,
   .icon-next {
@@ -174,11 +174,11 @@
 .carousel-indicators {
   position: absolute;
   bottom: 10px;
-  left: 50%;
+  #{$left}: 50%;
   z-index: 15;
   width: 60%;
-  margin-left: -30%;
-  padding-left: 0;
+  margin-#{$left}: -30%;
+  padding-#{$left}: 0;
   list-style: none;
   text-align: center;
 
@@ -246,13 +246,13 @@
       margin-top: ($carousel-control-font-size / -2);
       font-size: ($carousel-control-font-size * 1.5);
     }
-    .glyphicon-chevron-left,
+    .glyphicon-chevron-#{$left},
     .icon-prev {
-      margin-left: ($carousel-control-font-size / -2);
+      margin-#{$left}: ($carousel-control-font-size / -2);
     }
-    .glyphicon-chevron-right,
+    .glyphicon-chevron-#{$right},
     .icon-next {
-      margin-right: ($carousel-control-font-size / -2);
+      margin-#{$right}: ($carousel-control-font-size / -2);
     }
   }
 
