update used bootstrap to 3.4.1

--- a/assets/stylesheets/bootstrap/_input-groups.scss
+++ b/assets/stylesheets/bootstrap/_input-groups.scss
@@ -12,8 +12,8 @@
   // Undo padding and float of grid classes
   &[class*="col-"] {
     float: none;
-    padding-left: 0;
     padding-right: 0;
+    padding-left: 0;
   }
 
   .form-control {
@@ -77,7 +77,7 @@
 .input-group-addon {
   padding: $padding-base-vertical $padding-base-horizontal;
   font-size: $font-size-base;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1;
   color: $input-color;
   text-align: center;
@@ -115,7 +115,7 @@
   @include border-right-radius(0);
 }
 .input-group-addon:first-child {
-  border-#{$right}: 0;
+  border-right: 0;
 }
 .input-group .form-control:last-child,
 .input-group-addon:last-child,
@@ -127,7 +127,7 @@
   @include border-left-radius(0);
 }
 .input-group-addon:last-child {
-  border-#{$left}: 0;
+  border-left: 0;
 }
 
 // Button input groups
@@ -144,7 +144,7 @@
   > .btn {
     position: relative;
     + .btn {
-      margin-#{$left}: -1px;
+      margin-left: -1px;
     }
     // Bring the "active" button to the front
     &:hover,
@@ -158,14 +158,14 @@
   &:first-child {
     > .btn,
     > .btn-group {
-      margin-#{$right}: -1px;
+      margin-right: -1px;
     }
   }
   &:last-child {
     > .btn,
     > .btn-group {
       z-index: 2;
-      margin-#{$left}: -1px;
+      margin-left: -1px;
     }
   }
 }
