--- a/assets/stylesheets/bootstrap/_badges.scss
+++ b/assets/stylesheets/bootstrap/_badges.scss
@@ -10,11 +10,11 @@
   padding: 3px 7px;
   font-size: $font-size-small;
   font-weight: $badge-font-weight;
-  color: $badge-color;
   line-height: $badge-line-height;
-  vertical-align: middle;
-  white-space: nowrap;
+  color: $badge-color;
   text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
   background-color: $badge-bg;
   border-radius: $badge-border-radius;
 
@@ -49,11 +49,11 @@
   }
 
   .list-group-item > & + & {
-    margin-#{$right}: 5px;
+    margin-right: 5px;
   }
 
   .nav-pills > li > a > & {
-    margin-#{$left}: 3px;
+    margin-left: 3px;
   }
 }
 
