--- a/assets/stylesheets/bootstrap/_dropdowns.scss
+++ b/assets/stylesheets/bootstrap/_dropdowns.scss
@@ -8,12 +8,12 @@
   display: inline-block;
   width: 0;
   height: 0;
-  margin-#{$left}: 2px;
+  margin-left: 2px;
   vertical-align: middle;
-  border-top:   $caret-width-base dashed;
-  border-top:   $caret-width-base solid \9; // IE8
+  border-top: $caret-width-base dashed;
+  border-top: $caret-width-base solid \9; // IE8
   border-right: $caret-width-base solid transparent;
-  border-left:  $caret-width-base solid transparent;
+  border-left: $caret-width-base solid transparent;
 }
 
 // The dropdown wrapper (div)
@@ -31,29 +31,29 @@
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  #{$left}: 0;
+  left: 0;
   z-index: $zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
   float: $left;
   min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0; // override default ul
-  list-style: none;
   font-size: $font-size-base;
   text-align: $left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
+  list-style: none;
   background-color: $dropdown-bg;
+  background-clip: padding-box;
   border: 1px solid $dropdown-fallback-border; // IE8 fallback
   border: 1px solid $dropdown-border;
   border-radius: $border-radius-base;
-  @include box-shadow(0 6px 12px rgba(0,0,0,.175));
-  background-clip: padding-box;
+  @include box-shadow(0 6px 12px rgba(0, 0, 0, .175));
 
   // Aligns the dropdown menu to right
   //
   // Deprecated as of 3.1.0 in favor of `.dropdown-menu-[dir]`
-  &.pull-#{$right} {
-    #{$right}: 0;
-    #{$left}: auto;
+  &.pull-right {
+    right: 0;
+    left: auto;
   }
 
   // Dividers (basically an hr) within the dropdown
@@ -66,20 +66,17 @@
     display: block;
     padding: 3px 20px;
     clear: both;
-    font-weight: normal;
+    font-weight: 400;
     line-height: $line-height-base;
     color: $dropdown-link-color;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
-  }
-}
 
-// Hover/Focus state
-.dropdown-menu > li > a {
-  &:hover,
-  &:focus {
-    text-decoration: none;
-    color: $dropdown-link-hover-color;
-    background-color: $dropdown-link-hover-bg;
+    &:hover,
+    &:focus {
+      color: $dropdown-link-hover-color;
+      text-decoration: none;
+      background-color: $dropdown-link-hover-bg;
+    }
   }
 }
 
@@ -90,8 +87,8 @@
   &:focus {
     color: $dropdown-link-active-color;
     text-decoration: none;
-    outline: 0;
     background-color: $dropdown-link-active-bg;
+    outline: 0;
   }
 }
 
@@ -110,10 +107,10 @@
   &:hover,
   &:focus {
     text-decoration: none;
+    cursor: $cursor-disabled;
     background-color: transparent;
     background-image: none; // Remove CSS gradient
     @include reset-filter;
-    cursor: $cursor-disabled;
   }
 }
 
@@ -134,19 +131,19 @@
 //
 // Add extra class to `.dropdown-menu` to flip the alignment of the dropdown
 // menu with the parent.
-.dropdown-menu-#{$right} {
-  #{$left}: auto; // Reset the default from `.dropdown-menu`
-  #{$right}: 0;
+.dropdown-menu-right {
+  right: 0;
+  left: auto; // Reset the default from `.dropdown-menu`
 }
-// With v3, we enabled auto-flipping if you have a dropdown within a #{$right}
+// With v3, we enabled auto-flipping if you have a dropdown within a right
 // aligned nav component. To enable the undoing of that, we provide an override
 // to restore the default dropdown menu alignment.
 //
-// This is only for #{$left}-aligning a dropdown menu within a `.navbar-#{$right}` or
-// `.pull-#{$right}` nav component.
-.dropdown-menu-#{$left} {
-  #{$left}: 0;
-  #{$right}: auto;
+// This is only for left-aligning a dropdown menu within a `.navbar-right` or
+// `.pull-right` nav component.
+.dropdown-menu-left {
+  right: auto;
+  left: 0;
 }
 
 // Dropdown section headers
@@ -162,17 +159,17 @@
 // Backdrop to catch body clicks on mobile, etc.
 .dropdown-backdrop {
   position: fixed;
-  left: 0;
+  top: 0;
   right: 0;
   bottom: 0;
-  top: 0;
+  left: 0;
   z-index: ($zindex-dropdown - 10);
 }
 
 // Right aligned dropdowns
-.pull-#{$right} > .dropdown-menu {
-  #{$right}: 0;
-  #{$left}: auto;
+.pull-right > .dropdown-menu {
+  right: 0;
+  left: auto;
 }
 
 // Allow for dropdowns to go bottom up (aka, dropup-menu)
@@ -184,10 +181,10 @@
 .navbar-fixed-bottom .dropdown {
   // Reverse the caret
   .caret {
+    content: "";
     border-top: 0;
     border-bottom: $caret-width-base dashed;
     border-bottom: $caret-width-base solid \9; // IE8
-    content: "";
   }
   // Different positioning for bottom up menu
   .dropdown-menu {
@@ -203,14 +200,14 @@
 // Reiterate per navbar.less and the modified component alignment there.
 
 @media (min-width: $grid-float-breakpoint) {
-  .navbar-#{$right} {
+  .navbar-right {
     .dropdown-menu {
-      #{$right}: 0; #{$left}: auto;
+      right: 0; left: auto;
     }
-    // Necessary for overrides of the default #{$right} aligned menu.
+    // Necessary for overrides of the default right aligned menu.
     // Will remove come v4 in all likelihood.
-    .dropdown-menu-#{$left} {
-      #{$left}: 0; #{$right}: auto;
+    .dropdown-menu-left {
+      left: 0; right: auto;
     }
   }
 }
