--- a/assets/stylesheets/bootstrap/_pagination.scss
+++ b/assets/stylesheets/bootstrap/_pagination.scss
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 .pagination {
   display: inline-block;
-  padding-#{$left}: 0;
+  padding-left: 0;
   margin: $line-height-computed 0;
   border-radius: $border-radius-base;
 
@@ -14,17 +14,25 @@
       position: relative;
       float: $left; // Collapse white-space
       padding: $padding-base-vertical $padding-base-horizontal;
+      margin-left: -1px;
       line-height: $line-height-base;
-      text-decoration: none;
       color: $pagination-color;
+      text-decoration: none;
       background-color: $pagination-bg;
       border: 1px solid $pagination-border;
-      margin-#{$left}: -1px;
+
+      &:hover,
+      &:focus {
+        z-index: 2;
+        color: $pagination-hover-color;
+        background-color: $pagination-hover-bg;
+        border-color: $pagination-hover-border;
+      }
     }
     &:first-child {
       > a,
       > span {
-        margin-#{$left}: 0;
+        margin-left: 0;
         @include border-left-radius($border-radius-base);
       }
     }
@@ -36,17 +44,6 @@
     }
   }
 
-  > li > a,
-  > li > span {
-    &:hover,
-    &:focus {
-      z-index: 2;
-      color: $pagination-hover-color;
-      background-color: $pagination-hover-bg;
-      border-color: $pagination-hover-border;
-    }
-  }
-
   > .active > a,
   > .active > span {
     &,
@@ -54,9 +51,9 @@
     &:focus {
       z-index: 3;
       color: $pagination-active-color;
+      cursor: default;
       background-color: $pagination-active-bg;
       border-color: $pagination-active-border;
-      cursor: default;
     }
   }
 
@@ -68,9 +65,9 @@
     > a:hover,
     > a:focus {
       color: $pagination-disabled-color;
+      cursor: $cursor-disabled;
       background-color: $pagination-disabled-bg;
       border-color: $pagination-disabled-border;
-      cursor: $cursor-disabled;
     }
   }
 }
