--- a/assets/stylesheets/bootstrap/mixins/_grid-framework.scss
+++ b/assets/stylesheets/bootstrap/mixins/_grid-framework.scss
@@ -13,8 +13,8 @@
     // Prevent columns from collapsing when empty
     min-height: 1px;
     // Inner gutter via padding
-    padding-left:  ceil(($grid-gutter-width / 2));
     padding-right: floor(($grid-gutter-width / 2));
+    padding-left: ceil(($grid-gutter-width / 2));
   }
 }
 
@@ -38,27 +38,27 @@
   }
   @if ($type == push) and ($index > 0) {
     .col-#{$class}-push-#{$index} {
-      #{$left}: percentage(($index / $grid-columns));
+      left: percentage(($index / $grid-columns));
     }
   }
   @if ($type == push) and ($index == 0) {
     .col-#{$class}-push-0 {
-      #{$left}: auto;
+      left: auto;
     }
   }
   @if ($type == pull) and ($index > 0) {
     .col-#{$class}-pull-#{$index} {
-      #{$right}: percentage(($index / $grid-columns));
+      right: percentage(($index / $grid-columns));
     }
   }
   @if ($type == pull) and ($index == 0) {
     .col-#{$class}-pull-0 {
-      #{$right}: auto;
+      right: auto;
     }
   }
   @if ($type == offset) {
     .col-#{$class}-offset-#{$index} {
-      margin-#{$left}: percentage(($index / $grid-columns));
+      margin-left: percentage(($index / $grid-columns));
     }
   }
 }
