Add direction variables (left, right)

--- a/assets/stylesheets/bootstrap/_button-groups.scss
+++ b/assets/stylesheets/bootstrap/_button-groups.scss
@@ -27,13 +27,13 @@
   .btn + .btn-group,
   .btn-group + .btn,
   .btn-group + .btn-group {
-    margin-left: -1px;
+    margin-#{$left}: -1px;
   }
 }
 
 // Optional: Group multiple button groups together for a toolbar
 .btn-toolbar {
-  margin-left: -5px; // Offset the first child's margin
+  margin-#{$left}: -5px; // Offset the first child's margin
   @include clearfix;
 
   .btn,
@@ -44,7 +44,7 @@
   > .btn,
   > .btn-group,
   > .input-group {
-    margin-left: 5px;
+    margin-#{$left}: 5px;
   }
 }
 
@@ -54,7 +54,7 @@
 
 // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
 .btn-group > .btn:first-child {
-  margin-left: 0;
+  margin-#{$left}: 0;
   &:not(:last-child):not(.dropdown-toggle) {
     @include border-right-radius(0);
   }
@@ -103,18 +103,18 @@
 
 // Give the line between buttons some depth
 .btn-group > .btn + .dropdown-toggle {
-  padding-right: 8px;
   padding-left: 8px;
+  padding-right: 8px;
 }
 .btn-group > .btn-lg + .dropdown-toggle {
-  padding-right: 12px;
   padding-left: 12px;
+  padding-right: 12px;
 }
 
 // The clickable button for toggling the menu
 // Remove the gradient and set the same inset shadow as the :active state
 .btn-group.open .dropdown-toggle {
-  @include box-shadow(inset 0 3px 5px rgba(0, 0, 0, .125));
+  @include box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
 
   // Show no shadow for `.btn-link` since it has no other button styles.
   &.btn-link {
@@ -125,7 +125,7 @@
 
 // Reposition the caret
 .btn .caret {
-  margin-left: 0;
+  margin-#{$left}: 0;
 }
 // Carets in other button sizes
 .btn-lg .caret {
@@ -164,7 +164,7 @@
   > .btn-group + .btn,
   > .btn-group + .btn-group {
     margin-top: -1px;
-    margin-left: 0;
+    margin-#{$left}: 0;
   }
 }
 
@@ -205,8 +205,8 @@
   border-collapse: separate;
   > .btn,
   > .btn-group {
-    display: table-cell;
     float: none;
+    display: table-cell;
     width: 1%;
   }
   > .btn-group .btn {
@@ -214,7 +214,7 @@
   }
 
   > .btn-group .dropdown-menu {
-    left: auto;
+    #{$left}: auto;
   }
 }
 
@@ -237,7 +237,7 @@
     input[type="radio"],
     input[type="checkbox"] {
       position: absolute;
-      clip: rect(0, 0, 0, 0);
+      clip: rect(0,0,0,0);
       pointer-events: none;
     }
   }
