--- a/assets/stylesheets/bootstrap/_alerts.scss
+++ b/assets/stylesheets/bootstrap/_alerts.scss
@@ -15,7 +15,8 @@
   // Headings for larger alerts
   h4 {
     margin-top: 0;
-    color: inherit; // Specified for the h4 to prevent conflicts of changing $headings-color
+    // Specified for the h4 to prevent conflicts of changing $headings-color
+    color: inherit;
   }
 
   // Provide class for links that match alerts
@@ -38,16 +39,15 @@
 //
 // Expand the right padding and account for the close button's positioning.
 
-// The misspelled .alert-dismissable was deprecated in 3.2.0.
-.alert-dismissable,
+.alert-dismissable, // The misspelled .alert-dismissable was deprecated in 3.2.0.
 .alert-dismissible {
-  padding-right: ($alert-padding + 20);
+  padding-#{$right}: ($alert-padding + 20);
 
   // Adjust close link position
   .close {
     position: relative;
     top: -2px;
-    right: -21px;
+    #{$right}: -21px;
     color: inherit;
   }
 }
