--- a/assets/stylesheets/bootstrap/_forms.scss
+++ b/assets/stylesheets/bootstrap/_forms.scss
@@ -8,13 +8,13 @@
 // Restyle and baseline non-control form elements.
 
 fieldset {
+  padding: 0;
+  margin: 0;
+  border: 0;
   // Chrome and Firefox set a `min-width: min-content;` on fieldsets,
   // so we reset that to ensure it behaves more like a standard block element.
   // See https://github.com/twbs/bootstrap/issues/12359.
   min-width: 0;
-  padding: 0;
-  margin: 0;
-  border: 0;
 }
 
 legend {
@@ -43,18 +43,9 @@ label {
 // is required to ensure optimum display with or without those classes to better
 // address browser inconsistencies.
 
+// Override content-box in Normalize (* isn't specific enough)
 input[type="search"] {
-  // Override content-box in Normalize (* isn't specific enough)
   @include box-sizing(border-box);
-
-  // Search inputs in iOS
-  //
-  // This overrides the extra rounded corners on search inputs in iOS so that our
-  // `.form-control` class can properly style them. Note that this cannot simply
-  // be added to `.form-control` as it's not specific enough. For details, see
-  // https://github.com/twbs/bootstrap/issues/11586.
-  -webkit-appearance: none;
-  appearance: none;
 }
 
 // Position radios and checkboxes better
@@ -63,16 +54,6 @@ input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9; // IE8-9
   line-height: normal;
-
-  // Apply same disabled cursor tweak as for inputs
-  // Some special care is needed because <label>s don't inherit their parent's `cursor`.
-  //
-  // Note: Neither radios nor checkboxes can be readonly.
-  &[disabled],
-  &.disabled,
-  fieldset[disabled] & {
-    cursor: $cursor-disabled;
-  }
 }
 
 input[type="file"] {
@@ -142,7 +123,7 @@ output {
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid $input-border;
   border-radius: $input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
-  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075));
+  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
 
   // Customize the `:focus` state to imitate native WebKit styles.
@@ -153,8 +134,8 @@ output {
 
   // Unstyle the caret on `<select>`s in IE10+.
   &::-ms-expand {
-    background-color: transparent;
     border: 0;
+    background-color: transparent;
   }
 
   // Disabled and read-only inputs
@@ -180,6 +161,18 @@ output {
 // Reset height for `textarea`s
 textarea.form-control {
   height: auto;
+}
+
+
+// Search inputs in iOS
+//
+// This overrides the extra rounded corners on search inputs in iOS so that our
+// `.form-control` class can properly style them. Note that this cannot simply
+// be added to `.form-control` as it's not specific enough. For details, see
+// https://github.com/twbs/bootstrap/issues/11586.
+
+input[type="search"] {
+  -webkit-appearance: none;
 }
 
 
@@ -235,17 +228,9 @@ textarea.form-control {
   margin-top: 10px;
   margin-bottom: 10px;
 
-  // These are used on elements with <label> descendants
-  &.disabled,
-  fieldset[disabled] & {
-    label {
-      cursor: $cursor-disabled;
-    }
-  }
-
   label {
     min-height: $line-height-computed; // Ensure the input doesn't jump when there is no text
-    padding-left: 20px;
+    padding-#{$left}: 20px;
     margin-bottom: 0;
     font-weight: 400;
     cursor: pointer;
@@ -256,8 +241,8 @@ textarea.form-control {
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"] {
   position: absolute;
+  margin-#{$left}: -20px;
   margin-top: 4px \9;
-  margin-left: -20px;
 }
 
 .radio + .radio,
@@ -270,22 +255,47 @@ textarea.form-control {
 .checkbox-inline {
   position: relative;
   display: inline-block;
-  padding-left: 20px;
+  padding-#{$left}: 20px;
   margin-bottom: 0;
-  font-weight: 400;
   vertical-align: middle;
+  font-weight: 400;
   cursor: pointer;
+}
+.radio-inline + .radio-inline,
+.checkbox-inline + .checkbox-inline {
+  margin-top: 0;
+  margin-#{$left}: 10px; // space out consecutive inline controls
+}
 
-  // These are used directly on <label>s
+// Apply same disabled cursor tweak as for inputs
+// Some special care is needed because <label>s don't inherit their parent's `cursor`.
+//
+// Note: Neither radios nor checkboxes can be readonly.
+input[type="radio"],
+input[type="checkbox"] {
+  &[disabled],
   &.disabled,
   fieldset[disabled] & {
     cursor: $cursor-disabled;
   }
 }
-.radio-inline + .radio-inline,
-.checkbox-inline + .checkbox-inline {
-  margin-top: 0;
-  margin-left: 10px; // space out consecutive inline controls
+// These classes are used directly on <label>s
+.radio-inline,
+.checkbox-inline {
+  &.disabled,
+  fieldset[disabled] & {
+    cursor: $cursor-disabled;
+  }
+}
+// These classes are used on elements with <label> descendants
+.radio,
+.checkbox {
+  &.disabled,
+  fieldset[disabled] & {
+    label {
+      cursor: $cursor-disabled;
+    }
+  }
 }
 
 
@@ -295,17 +305,17 @@ textarea.form-control {
 // a horizontal form layout.
 
 .form-control-static {
-  min-height: ($line-height-computed + $font-size-base);
   // Size it appropriately next to real form controls
   padding-top: ($padding-base-vertical + 1);
   padding-bottom: ($padding-base-vertical + 1);
   // Remove default margin from `p`
   margin-bottom: 0;
+  min-height: ($line-height-computed + $font-size-base);
 
   &.input-lg,
   &.input-sm {
-    padding-right: 0;
     padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -381,14 +391,14 @@ textarea.form-control {
 
   // Ensure icons don't overlap text
   .form-control {
-    padding-right: ($input-height-base * 1.25);
+    padding-#{$right}: ($input-height-base * 1.25);
   }
 }
 // Feedback icon (requires .glyphicon classes)
 .form-control-feedback {
   position: absolute;
   top: 0;
-  right: 0;
+  #{$right}: 0;
   z-index: 2; // Ensure icon is above input groups
   display: block;
   width: $input-height-base;
@@ -514,13 +524,13 @@ textarea.form-control {
       vertical-align: middle;
 
       label {
-        padding-left: 0;
+        padding-#{$left}: 0;
       }
     }
     .radio input[type="radio"],
     .checkbox input[type="checkbox"] {
       position: relative;
-      margin-left: 0;
+      margin-#{$left}: 0;
     }
 
     // Re-override the feedback icon.
@@ -550,9 +560,9 @@ textarea.form-control {
   .checkbox,
   .radio-inline,
   .checkbox-inline {
-    padding-top: ($padding-base-vertical + 1); // Default padding plus a border
     margin-top: 0;
     margin-bottom: 0;
+    padding-top: ($padding-base-vertical + 1); // Default padding plus a border
   }
   // Account for padding we're adding to ensure the alignment and of help text
   // and other content below items
@@ -570,9 +580,9 @@ textarea.form-control {
   // labels on narrow viewports stack the same as a default form example.
   @media (min-width: $screen-sm-min) {
     .control-label {
-      padding-top: ($padding-base-vertical + 1); // Default padding plus a border
-      margin-bottom: 0;
       text-align: $right;
+      margin-bottom: 0;
+      padding-top: ($padding-base-vertical + 1); // Default padding plus a border
     }
   }
 
@@ -581,7 +591,7 @@ textarea.form-control {
   // Reposition the icon because it's now within a grid column and columns have
   // `position: relative;` on them. Also accounts for the grid gutter padding.
   .has-feedback .form-control-feedback {
-    right: floor(($grid-gutter-width / 2));
+    #{$right}: floor(($grid-gutter-width / 2));
   }
 
   // Form group sizes
