--- a/assets/stylesheets/bootstrap/_media.scss
+++ b/assets/stylesheets/bootstrap/_media.scss
@@ -9,8 +9,8 @@
 
 .media,
 .media-body {
-  overflow: hidden;
   zoom: 1;
+  overflow: hidden;
 }
 
 .media-body {
@@ -61,6 +61,6 @@
 //
 // Undo default ul/ol styles
 .media-list {
-  padding-left: 0;
+  padding-#{$left}: 0;
   list-style: none;
 }
