--- a/assets/stylesheets/bootstrap/_navbar.scss
+++ b/assets/stylesheets/bootstrap/_navbar.scss
@@ -48,11 +48,11 @@
 // content for the user's viewport.
 
 .navbar-collapse {
-  padding-right: $navbar-padding-horizontal;
-  padding-left: $navbar-padding-horizontal;
   overflow-x: visible;
+  padding-right: $navbar-padding-horizontal;
+  padding-left:  $navbar-padding-horizontal;
   border-top: 1px solid transparent;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
   @include clearfix;
   -webkit-overflow-scrolling: touch;
 
@@ -81,8 +81,8 @@
     .navbar-fixed-top &,
     .navbar-static-top &,
     .navbar-fixed-bottom & {
-      padding-right: 0;
       padding-left: 0;
+      padding-right: 0;
     }
   }
 }
@@ -96,27 +96,6 @@
       max-height: 200px;
     }
   }
-
-  // Fix the top/bottom navbars when screen real estate supports it
-  position: fixed;
-  right: 0;
-  left: 0;
-  z-index: $zindex-navbar-fixed;
-
-  // Undo the rounded corners
-  @media (min-width: $grid-float-breakpoint) {
-    border-radius: 0;
-  }
-}
-
-.navbar-fixed-top {
-  top: 0;
-  border-width: 0 0 1px;
-}
-.navbar-fixed-bottom {
-  bottom: 0;
-  margin-bottom: 0; // override .navbar defaults
-  border-width: 1px 0 0;
 }
 
 
@@ -129,11 +108,11 @@
   > .navbar-header,
   > .navbar-collapse {
     margin-right: -$navbar-padding-horizontal;
-    margin-left: -$navbar-padding-horizontal;
+    margin-left:  -$navbar-padding-horizontal;
 
     @media (min-width: $grid-float-breakpoint) {
       margin-right: 0;
-      margin-left: 0;
+      margin-left:  0;
     }
   }
 }
@@ -155,15 +134,38 @@
   }
 }
 
+// Fix the top/bottom navbars when screen real estate supports it
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: $zindex-navbar-fixed;
+
+  // Undo the rounded corners
+  @media (min-width: $grid-float-breakpoint) {
+    border-radius: 0;
+  }
+}
+.navbar-fixed-top {
+  top: 0;
+  border-width: 0 0 1px;
+}
+.navbar-fixed-bottom {
+  bottom: 0;
+  margin-bottom: 0; // override .navbar defaults
+  border-width: 1px 0 0;
+}
+
 
 // Brand/project name
 
 .navbar-brand {
   float: $left;
-  height: $navbar-height;
   padding: $navbar-padding-vertical $navbar-padding-horizontal;
   font-size: $font-size-large;
   line-height: $line-height-computed;
+  height: $navbar-height;
 
   &:hover,
   &:focus {
@@ -177,7 +179,7 @@
   @media (min-width: $grid-float-breakpoint) {
     .navbar > .container &,
     .navbar > .container-fluid & {
-      margin-left: -$navbar-padding-horizontal;
+      margin-#{$left}: -$navbar-padding-horizontal;
     }
   }
 }
@@ -191,8 +193,8 @@
 .navbar-toggle {
   position: relative;
   float: $right;
+  margin-#{$right}: $navbar-padding-horizontal;
   padding: 9px 10px;
-  margin-right: $navbar-padding-horizontal;
   @include navbar-vertical-align(34px);
   background-color: transparent;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
@@ -231,7 +233,7 @@
   margin: ($navbar-padding-vertical / 2) (-$navbar-padding-horizontal);
 
   > li > a {
-    padding-top: 10px;
+    padding-top:    10px;
     padding-bottom: 10px;
     line-height: $line-height-computed;
   }
@@ -248,7 +250,7 @@
       box-shadow: none;
       > li > a,
       .dropdown-header {
-        padding: 5px 15px 5px 25px;
+        padding: side-values(5px 15px 5px 25px);
       }
       > li > a {
         line-height: $line-height-computed;
@@ -268,7 +270,7 @@
     > li {
       float: $left;
       > a {
-        padding-top: $navbar-padding-vertical;
+        padding-top:    $navbar-padding-vertical;
         padding-bottom: $navbar-padding-vertical;
       }
     }
@@ -282,12 +284,12 @@
 // our navbars.
 
 .navbar-form {
-  padding: 10px $navbar-padding-horizontal;
-  margin-right: -$navbar-padding-horizontal;
   margin-left: -$navbar-padding-horizontal;
+  margin-right: -$navbar-padding-horizontal;
+  padding: 10px $navbar-padding-horizontal;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  $shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
+  $shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1);
   @include box-shadow($shadow);
 
   // Mixin behavior for optimum display
@@ -309,11 +311,11 @@
   // Undo 100% width for pull classes
   @media (min-width: $grid-float-breakpoint) {
     width: auto;
+    border: 0;
+    margin-left: 0;
+    margin-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    margin-right: 0;
-    margin-left: 0;
-    border: 0;
     @include box-shadow(none);
   }
 }
@@ -359,8 +361,8 @@
 
   @media (min-width: $grid-float-breakpoint) {
     float: $left;
-    margin-right: $navbar-padding-horizontal;
     margin-left: $navbar-padding-horizontal;
+    margin-right: $navbar-padding-horizontal;
   }
 }
 
@@ -374,15 +376,15 @@
 // Declared after the navbar components to ensure more specificity on the margins.
 
 @media (min-width: $grid-float-breakpoint) {
-  .navbar-left {
-    float: left !important;
+  .navbar-#{$left} {
+    float: $left !important;
   }
-  .navbar-right {
-    float: right !important;
-  margin-right: -$navbar-padding-horizontal;
+  .navbar-#{$right} {
+    float: $right !important;
+  margin-#{$right}: -$navbar-padding-horizontal;
 
-    ~ .navbar-right {
-      margin-right: 0;
+    ~ .navbar-#{$right} {
+      margin-#{$right}: 0;
     }
   }
 }
@@ -435,15 +437,33 @@
         background-color: $navbar-default-link-disabled-bg;
       }
     }
+  }
 
-    // Dropdown menu items
+  .navbar-toggle {
+    border-color: $navbar-default-toggle-border-color;
+    &:hover,
+    &:focus {
+      background-color: $navbar-default-toggle-hover-bg;
+    }
+    .icon-bar {
+      background-color: $navbar-default-toggle-icon-bar-bg;
+    }
+  }
+
+  .navbar-collapse,
+  .navbar-form {
+    border-color: $navbar-default-border;
+  }
+
+  // Dropdown menu items
+  .navbar-nav {
     // Remove background color from open dropdown
     > .open > a {
       &,
       &:hover,
       &:focus {
-        color: $navbar-default-link-active-color;
         background-color: $navbar-default-link-active-bg;
+        color: $navbar-default-link-active-color;
       }
     }
 
@@ -476,22 +496,6 @@
         }
       }
     }
-  }
-
-  .navbar-toggle {
-    border-color: $navbar-default-toggle-border-color;
-    &:hover,
-    &:focus {
-      background-color: $navbar-default-toggle-hover-bg;
-    }
-    .icon-bar {
-      background-color: $navbar-default-toggle-icon-bar-bg;
-    }
-  }
-
-  .navbar-collapse,
-  .navbar-form {
-    border-color: $navbar-default-border;
   }
 
 
@@ -567,14 +571,33 @@
         background-color: $navbar-inverse-link-disabled-bg;
       }
     }
+  }
 
-    // Dropdowns
+  // Darken the responsive nav toggle
+  .navbar-toggle {
+    border-color: $navbar-inverse-toggle-border-color;
+    &:hover,
+    &:focus {
+      background-color: $navbar-inverse-toggle-hover-bg;
+    }
+    .icon-bar {
+      background-color: $navbar-inverse-toggle-icon-bar-bg;
+    }
+  }
+
+  .navbar-collapse,
+  .navbar-form {
+    border-color: darken($navbar-inverse-bg, 7%);
+  }
+
+  // Dropdowns
+  .navbar-nav {
     > .open > a {
       &,
       &:hover,
       &:focus {
-        color: $navbar-inverse-link-active-color;
         background-color: $navbar-inverse-link-active-bg;
+        color: $navbar-inverse-link-active-color;
       }
     }
 
@@ -613,23 +636,6 @@
         }
       }
     }
-  }
-
-  // Darken the responsive nav toggle
-  .navbar-toggle {
-    border-color: $navbar-inverse-toggle-border-color;
-    &:hover,
-    &:focus {
-      background-color: $navbar-inverse-toggle-hover-bg;
-    }
-    .icon-bar {
-      background-color: $navbar-inverse-toggle-icon-bar-bg;
-    }
-  }
-
-  .navbar-collapse,
-  .navbar-form {
-    border-color: darken($navbar-inverse-bg, 7%);
   }
 
   .navbar-link {
