--- a/assets/stylesheets/bootstrap/_navs.scss
+++ b/assets/stylesheets/bootstrap/_navs.scss
@@ -7,8 +7,8 @@
 // --------------------------------------------------
 
 .nav {
-  padding-left: 0; // Override default ul/ol
   margin-bottom: 0;
+  padding-#{$left}: 0; // Override default ul/ol
   list-style: none;
   @include clearfix;
 
@@ -35,8 +35,8 @@
       &:focus {
         color: $nav-disabled-link-hover-color;
         text-decoration: none;
-        cursor: $cursor-disabled;
         background-color: transparent;
+        cursor: $cursor-disabled;
       }
     }
   }
@@ -82,7 +82,7 @@
 
     // Actual tabs (as links)
     > a {
-      margin-right: 2px;
+      margin-#{$right}: 2px;
       line-height: $line-height-base;
       border: 1px solid transparent;
       border-radius: $border-radius-base $border-radius-base 0 0;
@@ -97,10 +97,10 @@
       &:hover,
       &:focus {
         color: $nav-tabs-active-link-hover-color;
-        cursor: default;
         background-color: $nav-tabs-active-link-hover-bg;
         border: 1px solid $nav-tabs-active-link-hover-border-color;
         border-bottom-color: transparent;
+        cursor: default;
       }
     }
   }
@@ -123,7 +123,7 @@
       border-radius: $nav-pills-border-radius;
     }
     + li {
-      margin-left: 2px;
+      margin-#{$left}: 2px;
     }
 
     // Active state
@@ -145,7 +145,7 @@
     float: none;
     + li {
       margin-top: 2px;
-      margin-left: 0; // no need for this gap between nav items
+      margin-#{$left}: 0; // no need for this gap between nav items
     }
   }
 }
@@ -163,14 +163,14 @@
   > li {
     float: none;
     > a {
-      margin-bottom: 5px;
       text-align: center;
+      margin-bottom: 5px;
     }
   }
 
   > .dropdown .dropdown-menu {
     top: auto;
-    left: auto;
+    #{$left}: auto;
   }
 
   @media (min-width: $screen-sm-min) {
@@ -192,7 +192,7 @@
 
   > li > a {
     // Override margin from .nav-tabs
-    margin-right: 0;
+    margin-#{$right}: 0;
     border-radius: $border-radius-base;
   }
 
