--- a/assets/stylesheets/bootstrap/_normalize.scss
+++ b/assets/stylesheets/bootstrap/_normalize.scss
@@ -120,7 +120,7 @@ abbr[title] {
 
 b,
 strong {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 //
@@ -406,7 +406,7 @@ textarea {
 //
 
 optgroup {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 // Tables
