--- a/assets/stylesheets/bootstrap/_pager.scss
+++ b/assets/stylesheets/bootstrap/_pager.scss
@@ -4,10 +4,10 @@
 
 
 .pager {
-  padding-left: 0;
+  padding-#{$left}: 0;
   margin: $line-height-computed 0;
-  text-align: center;
   list-style: none;
+  text-align: center;
   @include clearfix;
   li {
     display: inline;
@@ -47,8 +47,8 @@
     > a:focus,
     > span {
       color: $pager-disabled-color;
-      cursor: $cursor-disabled;
       background-color: $pager-bg;
+      cursor: $cursor-disabled;
     }
   }
 }
