--- a/assets/stylesheets/bootstrap/_panels.scss
+++ b/assets/stylesheets/bootstrap/_panels.scss
@@ -9,7 +9,7 @@
   background-color: $panel-bg;
   border: 1px solid transparent;
   border-radius: $panel-border-radius;
-  @include box-shadow(0 1px 1px rgba(0, 0, 0, .05));
+  @include box-shadow(0 1px 1px rgba(0,0,0,.05));
 }
 
 // Panel contents
@@ -113,8 +113,8 @@
     margin-bottom: 0;
 
     caption {
-      padding-right: $panel-body-padding;
       padding-left: $panel-body-padding;
+      padding-right: $panel-body-padding;
     }
   }
   // Add border top radius for first one
@@ -130,11 +130,11 @@
 
         td:first-child,
         th:first-child {
-          border-top-left-radius: ($panel-border-radius - 1);
+          border-top-#{$left}-radius: ($panel-border-radius - 1);
         }
         td:last-child,
         th:last-child {
-          border-top-right-radius: ($panel-border-radius - 1);
+          border-top-#{$right}-radius: ($panel-border-radius - 1);
         }
       }
     }
@@ -147,16 +147,16 @@
     > tbody:last-child,
     > tfoot:last-child {
       > tr:last-child {
-        border-bottom-right-radius: ($panel-border-radius - 1);
         border-bottom-left-radius: ($panel-border-radius - 1);
+        border-bottom-right-radius: ($panel-border-radius - 1);
 
         td:first-child,
         th:first-child {
-          border-bottom-left-radius: ($panel-border-radius - 1);
+          border-bottom-#{$left}-radius: ($panel-border-radius - 1);
         }
         td:last-child,
         th:last-child {
-          border-bottom-right-radius: ($panel-border-radius - 1);
+          border-bottom-#{$right}-radius: ($panel-border-radius - 1);
         }
       }
     }
@@ -180,11 +180,11 @@
       > tr {
         > th:first-child,
         > td:first-child {
-          border-left: 0;
+          border-#{$left}: 0;
         }
         > th:last-child,
         > td:last-child {
-          border-right: 0;
+          border-#{$right}: 0;
         }
       }
     }
@@ -208,8 +208,8 @@
     }
   }
   > .table-responsive {
-    margin-bottom: 0;
     border: 0;
+    margin-bottom: 0;
   }
 }
 
