--- a/assets/stylesheets/bootstrap/_progress-bars.scss
+++ b/assets/stylesheets/bootstrap/_progress-bars.scss
@@ -8,14 +8,14 @@
 
 // WebKit
 @-webkit-keyframes progress-bar-stripes {
-  from  { background-position: 40px 0; }
-  to    { background-position: 0 0; }
+  from  { background-position: if-ltr(40px, 0) 0; }
+  to    { background-position: if-ltr(0, 40px) 0; }
 }
 
 // Spec and IE10+
 @keyframes progress-bar-stripes {
-  from  { background-position: 40px 0; }
-  to    { background-position: 0 0; }
+  from  { background-position: if-ltr(40px, 0) 0; }
+  to    { background-position: if-ltr(0, 40px) 0; }
 }
 
 
@@ -24,12 +24,12 @@
 
 // Outer container
 .progress {
+  overflow: hidden;
   height: $line-height-computed;
   margin-bottom: $line-height-computed;
-  overflow: hidden;
   background-color: $progress-bg;
   border-radius: $progress-border-radius;
-  @include box-shadow(inset 0 1px 2px rgba(0, 0, 0, .1));
+  @include box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
 }
 
 // Bar of progress
@@ -42,7 +42,7 @@
   color: $progress-bar-color;
   text-align: center;
   background-color: $progress-bar-bg;
-  @include box-shadow(inset 0 -1px 0 rgba(0, 0, 0, .15));
+  @include box-shadow(inset 0 -1px 0 rgba(0,0,0,.15));
   @include transition(width .6s ease);
 }
 
