--- a/assets/stylesheets/bootstrap/_tables.scss
+++ b/assets/stylesheets/bootstrap/_tables.scss
@@ -5,34 +5,13 @@
 
 table {
   background-color: $table-bg;
-
-  // Table cell sizing
-  //
-  // Reset default table behavior
-
-  col[class*="col-"] {
-    position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
-    display: table-column;
-    float: none;
-  }
-
-  td,
-  th {
-    &[class*="col-"] {
-      position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
-      display: table-cell;
-      float: none;
-    }
-  }
 }
-
 caption {
   padding-top: $table-cell-padding;
   padding-bottom: $table-cell-padding;
   color: $text-muted;
   text-align: $left;
 }
-
 th {
   text-align: $left;
 }
@@ -149,6 +128,27 @@ th {
 }
 
 
+// Table cell sizing
+//
+// Reset default table behavior
+
+table col[class*="col-"] {
+  position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
+  float: none;
+  display: table-column;
+}
+table {
+  td,
+  th {
+    &[class*="col-"] {
+      position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
+      float: none;
+      display: table-cell;
+    }
+  }
+}
+
+
 // Table backgrounds
 //
 // Exact selectors below required to override `.table-striped` and prevent
@@ -169,12 +169,12 @@ th {
 // will display normally.
 
 .table-responsive {
-  min-height: .01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
   overflow-x: auto;
+  min-height: 0.01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
 
   @media screen and (max-width: $screen-xs-max) {
     width: 100%;
-    margin-bottom: ($line-height-computed * .75);
+    margin-bottom: ($line-height-computed * 0.75);
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     border: 1px solid $table-border-color;
@@ -207,11 +207,11 @@ th {
         > tr {
           > th:first-child,
           > td:first-child {
-            border-left: 0;
+            border-#{$left}: 0;
           }
           > th:last-child,
           > td:last-child {
-            border-right: 0;
+            border-#{$right}: 0;
           }
         }
       }
