--- a/assets/stylesheets/bootstrap/mixins/_grid.scss
+++ b/assets/stylesheets/bootstrap/mixins/_grid.scss
@@ -4,17 +4,17 @@
 
 // Centered container element
 @mixin container-fixed($gutter: $grid-gutter-width) {
-  padding-right: ceil(($gutter / 2));
-  padding-left: floor(($gutter / 2));
   margin-right: auto;
   margin-left: auto;
+  padding-left:  floor(($gutter / 2));
+  padding-right: ceil(($gutter / 2));
   @include clearfix;
 }
 
 // Creates a wrapper for a series of columns
 @mixin make-row($gutter: $grid-gutter-width) {
+  margin-left:  ceil(($gutter / -2));
   margin-right: floor(($gutter / -2));
-  margin-left: ceil(($gutter / -2));
   @include clearfix;
 }
 
@@ -24,25 +24,25 @@
   float: $left;
   width: percentage(($columns / $grid-columns));
   min-height: 1px;
+  padding-left:  ($gutter / 2);
   padding-right: ($gutter / 2);
-  padding-left: ($gutter / 2);
 }
 @mixin make-xs-column-offset($columns) {
-  margin-left: percentage(($columns / $grid-columns));
+  margin-#{$left}: percentage(($columns / $grid-columns));
 }
 @mixin make-xs-column-push($columns) {
-  left: percentage(($columns / $grid-columns));
+  #{$left}: percentage(($columns / $grid-columns));
 }
 @mixin make-xs-column-pull($columns) {
-  right: percentage(($columns / $grid-columns));
+  #{$right}: percentage(($columns / $grid-columns));
 }
 
 // Generate the small columns
 @mixin make-sm-column($columns, $gutter: $grid-gutter-width) {
   position: relative;
   min-height: 1px;
+  padding-left:  ($gutter / 2);
   padding-right: ($gutter / 2);
-  padding-left: ($gutter / 2);
 
   @media (min-width: $screen-sm-min) {
     float: $left;
@@ -51,17 +51,17 @@
 }
 @mixin make-sm-column-offset($columns) {
   @media (min-width: $screen-sm-min) {
-    margin-left: percentage(($columns / $grid-columns));
+    margin-#{$left}: percentage(($columns / $grid-columns));
   }
 }
 @mixin make-sm-column-push($columns) {
   @media (min-width: $screen-sm-min) {
-    left: percentage(($columns / $grid-columns));
+    #{$left}: percentage(($columns / $grid-columns));
   }
 }
 @mixin make-sm-column-pull($columns) {
   @media (min-width: $screen-sm-min) {
-    right: percentage(($columns / $grid-columns));
+    #{$right}: percentage(($columns / $grid-columns));
   }
 }
 
@@ -69,8 +69,8 @@
 @mixin make-md-column($columns, $gutter: $grid-gutter-width) {
   position: relative;
   min-height: 1px;
+  padding-left:  ($gutter / 2);
   padding-right: ($gutter / 2);
-  padding-left: ($gutter / 2);
 
   @media (min-width: $screen-md-min) {
     float: $left;
@@ -79,17 +79,17 @@
 }
 @mixin make-md-column-offset($columns) {
   @media (min-width: $screen-md-min) {
-    margin-left: percentage(($columns / $grid-columns));
+    margin-#{$left}: percentage(($columns / $grid-columns));
   }
 }
 @mixin make-md-column-push($columns) {
   @media (min-width: $screen-md-min) {
-    left: percentage(($columns / $grid-columns));
+    #{$left}: percentage(($columns / $grid-columns));
   }
 }
 @mixin make-md-column-pull($columns) {
   @media (min-width: $screen-md-min) {
-    right: percentage(($columns / $grid-columns));
+    #{$right}: percentage(($columns / $grid-columns));
   }
 }
 
@@ -97,8 +97,8 @@
 @mixin make-lg-column($columns, $gutter: $grid-gutter-width) {
   position: relative;
   min-height: 1px;
+  padding-left:  ($gutter / 2);
   padding-right: ($gutter / 2);
-  padding-left: ($gutter / 2);
 
   @media (min-width: $screen-lg-min) {
     float: $left;
@@ -107,16 +107,16 @@
 }
 @mixin make-lg-column-offset($columns) {
   @media (min-width: $screen-lg-min) {
-    margin-left: percentage(($columns / $grid-columns));
+    margin-#{$left}: percentage(($columns / $grid-columns));
   }
 }
 @mixin make-lg-column-push($columns) {
   @media (min-width: $screen-lg-min) {
-    left: percentage(($columns / $grid-columns));
+    #{$left}: percentage(($columns / $grid-columns));
   }
 }
 @mixin make-lg-column-pull($columns) {
   @media (min-width: $screen-lg-min) {
-    right: percentage(($columns / $grid-columns));
+    #{$right}: percentage(($columns / $grid-columns));
   }
 }
